# swigstarterkit

./: ProjectHome.md  configure.ac
include/: scriptinterface.hpp
lib/: Makefile.am  scriptinterface.cpp
src/: main.cpp
swig/: Makefile.am  scriptinterface.i
swig/csharp/: Makefile.am  README  languagespecific.i
swig/csharp/examples/: test.cs
swig/java/: Makefile.am  README  languagespecific.i
swig/java/examples/: Makefile.am  Makefile.test  test.java
swig/lua/: Makefile.am  SwigStarterKit_wrap.h  luascripting.cpp
swig/lua/examples/: Makefile.am  loadabletest.lua  test.lua
swig/perl5/: README
swig/perl5/examples/: test.pl
swig/php5/: Makefile.am
swig/python/: Makefile.am  README
swig/python/examples/: Makefile.am  test.py
swig/ruby/: Makefile.am
swig/ruby/examples/: test.rb
tags/swigstarterkit-0.0.1/: Makefile.am
tags/swigstarterkit-0.0.1/include/: Makefile.am  scriptinterface.hpp
tags/swigstarterkit-0.0.1/src/: Makefile.am  main.cpp
tags/swigstarterkit-0.0.1/swig/lua/: luascripting.hpp
tags/swigstarterkit-0.0.2/src/: main.cpp
tags/swigstarterkit-0.0.2/swig/lua/: Makefile.am  luascripting.cpp  sskluamod.cpp
tags/swigstarterkit-0.0.2/swig/lua/examples/: test.lua
tags/swigstarterkit-0.0.3/include/: scriptinterface.hpp
tags/swigstarterkit-0.0.3/lib/: scriptinterface.cpp
tags/swigstarterkit-0.0.3/swig/csharp/: Makefile.am
tags/swigstarterkit-0.0.3/swig/csharp/examples/: Makefile.am  Makefile.test
tags/swigstarterkit-0.0.3/swig/java/: Makefile.am  languagespecific.i
tags/swigstarterkit-0.0.3/swig/java/examples/: test.java
tags/swigstarterkit-0.0.3/swig/lua/: README  luascripting.cpp  sskluamod.cpp
tags/swigstarterkit-0.0.3/swig/lua/examples/: Makefile.am  loadabletest.lua
tags/swigstarterkit-0.0.3/swig/perl5/examples/: Makefile.am
tags/swigstarterkit-0.0.3/swig/python/examples/: Makefile.am  test.py
tags/swigstarterkit-0.0.3/swig/ruby/: README
tags/swigstarterkit-0.0.3/swig/ruby/examples/: Makefile.am
trunk/: configure.ac
trunk/include/: scriptinterface.hpp
trunk/lib/: scriptinterface.cpp
trunk/swig/: Makefile.am  scriptinterface.i
trunk/swig/csharp/: Makefile.am
trunk/swig/csharp/examples/: Makefile.am  test.cs
trunk/swig/java/: Makefile.am  README
trunk/swig/java/examples/: Script_Interface_Derived.java  test.java
trunk/swig/lua/: Makefile.am
trunk/swig/lua/examples/: loadabletest.lua  test.lua
trunk/swig/perl/examples/: test.pl
trunk/swig/perl5/: Makefile.am
trunk/swig/perl5/examples/: Makefile.am
trunk/swig/php5/: Makefile.am  README  languagespecific.i
trunk/swig/python/: Makefile.am
trunk/swig/ruby/: Makefile.am  languagespecific.i
trunk/swig/ruby/examples/: Makefile.am
